# tokenized-myers-diff

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  setup.sh
config/: linux_init_config.json  mac_init_config.json
lib/: ArgParser.cpp
lib/ArgParser/: ArgParser.cpp  ArgParser.h
lib/DiffPrint/: DiffPrint.cpp  DiffPrint.h
lib/DiffRunner/: DiffRunner.cpp  DiffRunner.h
lib/LSCommunicator/: CMakeLists.txt  LSCommunicator.cpp  LSCommunicator.h
lib/LSCommunicator/tests/: CMakeLists.txt  source_code.cpp  test.cpp
lib/MyersDiff/: MyersDiff.cpp  MyersDiff.h
lib/Timer/: Timer.cpp  Timer.h
lib/Tokenizer/: CMakeLists.txt  Templates_impl.cpp  Tokenizer.cpp  Tokenizer.h
lib/Tokenizer/IterableObject/: IterableObject.cpp  IterableObject.h
lib/Tokenizer/tests/: CMakeLists.txt  unit_test.cpp
tests/: CMakeLists.txt  TestGenerator.h
tests/Digits/: main.cpp
tests/samples/: asd  code_test1.cpp  code_test2.cpp  new_file.txt  old_file.txt  qwe  space1  space2  war_and_peace2.txt
